aded a bunch of stuff, and analytics.

--- a/index.html
+++ b/index.html
@@ -1,176 +1,165 @@
-<!DOCTYPE HTML>
+<doctype html>
 <html>
-<head>
-    <title>Volkan Özçelik</title>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="description" content="About Volkan Özçelik; who I am and the cool stuff I do." />
-    <meta name="keywords" content="Volkan, Volkan Özçelik, developer, front-end, portfolio" />
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" />
+    <head>
+        <title>Volkan Özçelik</title>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+        <meta name="description" content="About Volkan Özçelik; who I am and the cool stuff I do." />
+        <meta name="keywords" content="Volkan, Volkan Özçelik, developer, front-end, portfolio" />
+        <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" >
+        <style>
+            body {font-family: 'Open Sans', sans-serif; line-height: 1.85em;color: #888;font-weight: 300;background: #fdf6e3;}
 
-    <script src="js/js.js"></script>
-</head>
-<body>
-    <nav id="nav">
-        <ul>
-        <li><a href="#top">Top</a></li>
-        <li><a href="#portfolio">What I Do</a></li>
-        <li><a href="#contact">Find Me</a></li>
-        </ul>
-    </nav>
+            h1 {color: #bfa255;margin: 0 0 0.5em 0;font-size: 3.25em;line-height: 1.2em;letter-spacing:-0.025em;font-weight:normal;}
+            p  {color: #657b83;font-size: 1.5em;line-height: 1.75em;margin: 0;margin-bottom:1.5em;}
 
-    <div class="wrapper wrapper-style1 wrapper-first">
-    <article class="container" id="top">
-    <div class="row">
-        <div class="4u">
-        <span class="me image image-full"><img src="images/me.jpg"
-        alt="Photo of Volkan Özçelik" title=""></span>
-        </div>
-        <div class="8u">
+            strong {color: #888;font-weight: normal;}
+
+            a                       {color: #3B95C6;}
+            a:hover                 {text-decoration: none;}
+            a strong                {color: #3B95C6;}
+            a:hover, a:hover strong {color: #ff6d42 !important;}
+
+            ul, dl     {margin-top: -1.5em;margin-bottom: 2.5em;margin-left: 2em;padding-left: 0;}
+            li, dt, dd {margin-left: 0;display:block;font-size: 1.5em;line-height: 1.25em;margin-bottom:1em;}
+            li a, dt a {display: block;}
+            dt         {margin-bottom:0;}
+            dd         {margin-left:2em;font-style: italic;font-size:1em;}
+
+            blockquote {font-style:italic;font-size:1.2em;margin-top:-1em;margin-left:1.5em;line-height:1.55em;border-left:2px #bfa255 solid;padding-left:1em;}
+
+            aside     {width: 19.5em;height: 19.5em;margin: 0 auto;border-radius: 50%;overflow: hidden; display:block;}
+            aside img {display: block;width: 100%;}
+
+            header h1 {margin-bottom:0;}
+            header p  {margin-top: 0.1em;font-size: 1.2em;text-align: left;margin-bottom: 2em;}
+
+            footer      {text-align: right;float: left;width: 100%;margin: 1em 0;}
+            footer span {display: block;padding-right: 2em;}
+
+            #Main:hover p        {color: #758b93;}
+            #Main:hover strong   {color: #d33682; font-weight: normal;}
+            #Main:hover a strong {color: #3B95C6;}
+
+            .pushdown {margin-top:1em;}
+
+            #Meta        {width: 32%;float:left;min-width: 350px;}
+            #Main        {width: 65%;min-height: 600px;max-width: 750px;float:left;}
+            #Main, #Meta {margin-top:2em;}
+
+            @media (max-width: 1050px) {
+                #Meta       {float: none;margin: 0 auto;width:65%;padding-bottom: 2em;padding-top: 1.2em;}
+                #Meta aside {margin: 0;}
+
+                #Main {margin: 0 auto;float:none;}
+            }
+
+            @media (max-width: 800px) {
+                #Meta {padding-bottom: 1em;}
+
+                #Main {width: auto;padding: 2em;}
+            }
+        </style>
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-56512-13', 'volkan.io');
+          ga('send', 'pageview');
+        </script>
+    </head>
+    <body>
+        <section id="Meta">
+            <aside><img src="images/me.jpg" alt="Photo of Volkan Özçelik" title="Volkan Özçelik"></aside>
+        </section>
+        <article id="Main">
             <header>
-            <h1>Hi! I'm <strong>Volkan Özçelik</strong>;</h1>
-            <span><em>Jack of all Trades, Samurai of
-            <strong>JavaScript</strong></em>.</span>
+                <h1>Hi! I&#039;m Volkan Özçelik</h1>
+                <p><em>Jack of all Trades, Samurai of <strong>JavaScript</strong>.</em></p>
             </header>
+            <section>
+                <p>I&#039;ve been creating mobile and web front-ends, <strong>since 2003</strong>;<br>
+                and this is the place where I brag about all the cool stuff I do.</p>
 
-            <p>I've been creating <strong>mobile</strong> and
-            <strong>web</strong> front-ends, since 2003;<br>
-            and this is the place where I brag about all the cool
-            stuff I do.<br>
+                <p>I believe in the <strong>beauty</strong> of <strong>simplicity</strong>; and I
+                love to architect <strong>responsive</strong> and <strong>intuitive</strong> user interfaces,
+                driven by amazingly well-organized <strong>JavaScript</strong> code.</p>
 
-            I love to architect <strong>responsive</strong> and
-            <strong>intuitive</strong> <abbr title="User Interface"
-            >UI</abbr>,<br>
-            driven by well-organized <strong>JavaScript</strong>.<br>
+                <p>Currently, I&#039;m a <strong>Mobile Software Engineer</strong> at <a href="http://www.jivesoftware.com/">Jive Software</a>;<br>
+                I live in the lovely <strong>Mountain View, CA</strong>; and I work at <strong>Palo Alto</strong>.</p>
+            </section>
+            <section>
+                <h1>I Write</h1>
+                <p>I have a book about <strong><a href="http://o2js.com/interview-questions">JavaScript Interview Questions</a></strong>;
+                and here is its story:</p>
 
-            I'm a <strong>Mobile Software Engineer</strong> at
-            <a href="http://jivesoftware.com">Jive Software</a>.<br>
+                <blockquote>In the last couple of years I have been to at least a hundred technical
+                interviews on <strong>JavaScript Engineering</strong>,
+                <strong>Front-End Development</strong>, and related positions.
+                So, rather than giving some HR Manager&#039;s perspective on what
+                interviews should look like, I wanted to hand over the reader the <strong>red pill</strong>
+                and tell what the <strong>JavaScript Engineering</strong> interviews <strong>really are</strong>.
+                </blockquote>
 
-            I live in <strong>Mountain View, CA</strong>;
-            I work at <strong>Palo Alto</strong>.</p>
+                <ul class="pushdown" >
+                <li><a href="http://o2js.com/interview-questions/">learn more about my journey &raquo;&raquo;</a></li>
+                </ul>
+                <p>I also have a mostly <strong>JavaScript</strong>-related technical blog <a href="http://o2js.com"><strong>o2js.com</strong></a> that I regularly update.</p>
 
-            <a href="#portfolio" class="button button-big">Find More
-            About Me &raquo;&raquo;</a>
-        </div>
-    </div>
-    </article>
-    </div>
+                <ul class="pushdown" >
+                <li><a href="http://o2js.com/">read my blog &raquo;&raquo;</a></li>
+                </ul>
 
-    <div class="wrapper wrapper-style3" id="portfolio">
-    <article id="portfolio">
-    <header>
-    <h2>What I Do</h2>
-    <span>Here are some of the projects that I'm actively
-    working on&hellip;</span>
-    </header>
+                <p>Oh, by the way, <a href="http://github.com/v0lkan/o2.js">o2.js</a> is a
+                <strong>JavaScript Framework</strong> that I have been maintaining as a side project,
+                along with my <a href="http://github.com/v0lkan">many other side projects</a>.</p>
+	    </section>
+            <section>
+                <h1>I Talk</h1>
 
-    <div class="container">
-        <div class="row"><div class="12u"></div></div>
-        <div class="row">
-            <div class="4u">
-            <article class="box box-style2">
-            <a href="http://o2js.com/interview-questions"
-            class="image image-full"><img src="images/portfolio02.jpg"
-            alt="interview questions book image"
-            title="JavaScript Interview Questions"></a>
-            <h3><a href="http://flypixel.com/n33">#jsiq</a></h3>
-            <p><a href="http://o2js.com/interview-questions">JavaScript
-            Interview Questions.<br>Nail that Job Interview!</a></p>
-            </article>
-            </div>
+                <p>I love to talk about&hellip;</p>
 
-            <div class="4u">
-            <article class="box box-style2">
-            <a href="http://sarmal.com/" class="image image-full"><img
-            src="images/portfolio03.jpg" alt="sarmal.com image"
-            title="sarmal.com"></a>
-            <h3><a href="http://sarmal.com/">sarmal.com</a></h3>
-            <p><a href="http://sarmal.com/">A Poutpurri<br>
-            for the Front-End Samurai</a></p>
-            </article>
-            </div>
+                <ul>
+                <li><strong>JavaScript Engineering</strong>;</li>
+                <li>Web Application <strong>Performance</strong> and <strong>Speed</strong>;</li>
+                <li>And <strong>Web Application Development</strong> Best Practices.</li>
+                </ul>
 
-            <div class="4u">
-            <article class="box box-style2">
-            <a href="http://sarmal.com/" class="image image-full"><img
-            src="images/portfolio06.jpg" alt="sarmal.com github image"
-            title="sarmal.com - source code (github)"></a>
-            <h3><a href="https://github.com/v0lkan/sarmal.com/">sarmal.com (github)</a></h3>
-            <p><a href="https://github.com/v0lkan/sarmal.com/">the Source Code of<br>
-            <em>sarmal.com</em></a></p>
-            </article>
-            </div>
+                <p>If you are interested <a href="mailto:volkan@o2js.com">just shoot me an email</a>.<br>
+                I am highly motivated:<br>
+                I can talk for three slices of pizza, and some beer <strong>;)</strong>.</p>
 
-        </div>
-        <div class="row">
-            <div class="4u">
-            <article class="box box-style2">
-            <a href="https://github.com/v0lkan/o2.js"
-            class="image image-full"><img src="images/portfolio01.jpg"
-            alt="o2.js thumbnail" title="o2.js" /></a>
-            <h3><a href="https://github.com/v0lkan/o2.js">o2.js</a></h3>
-            <p><a href="https://github.com/v0lkan/o2.js">A Coherent
-            Solution to<br>Your JavaScript Dilemma</a></p>
-            </article>
-            </div>
+                <p>Here are a group of slideshows from some of the talks I&#039;ve given so far:</p>
 
-            <div class="4u">
-            <article class="box box-style2">
-            <a href="https://github.com/v0lkan/o2.js"
-            class="image image-full"><img src="images/portfolio04.jpg"
-            src="images/portfolio04.jpg"
-            alt="o2js.com thumbnail"></a>
-            <h3><a href="http://o2js.com/">o2.js Blog</a></h3>
-            <p><a href="http://o2js.com/">JavaScript
-            Architecture<br>Tips &amp; Tricks</a></p>
-            </article>
-            </div>
+                <dl>
+                <dt><a href="http://www.slideshare.net/linkibol/external-javascript-widget-development-best-practices-updated-v11"
+                    >External JavaScript Widget Development Best Practices &raquo;&raquo;</a></dt>
+                <dd>(a <strong>conference</strong> about widget development that I&#039;ve given at
+                    <strong><a href="http://jstanbul.org/2012/">JStanbul 2012</a></strong>)</dd>
 
-            <div class="4u">
-            <article class="box box-style2">
-            <a href="https://github.com/v0lkan/learning-objective-c"
-            class="image image-full"><img src="images/portfolio05.jpg"
-            alt="learning objective c github thumbnail"
-            title="Learning Objective C"/></a>
-            <h3><a
-            href="https://github.com/v0lkan/learning-objective-c"
-            >Learning Objective C</a></h3>
-            <p><a href="https://github.com/v0lkan/learning-objective-c"
-            >My Objective-C<br>
-            Experiments</a></p>
-            </article>
-            </div>
-        </div>
-    </div>
-    </article>
-    </div>
+                <dt><a href="http://o2js.com/udemy/presentation/index.html">Efficient JavaScript @udemy &raquo;&raquo;</a></dt>
+                <dd>(a 3-hour <strong>workshop</strong> that I&#039;ve given to
+                <strong><a href="http://udemy.com>">udemy</a></strong> engineers)</dd>
 
-    <div class="wrapper wrapper-style4 findmeon">
-    <article class="row row-special"  id="contact">
-    <div class="12u">
-    <h3>Find me on &hellip;</h3>
-    <ul class="social">
-    <li class="linkedin"><a
-    href="https://linkedin.com/in/volkanozcelik"
-    class="icon icon-linkedin"><span>LinkedIn</span></a></li>
-    <li class="github"><a
-    href="https://github.com/v0lkan"
-    class="icon icon-github"><span>Github</span></a></li>
-    <li class="twitter"><a
-    href="https://twitter.com/linkibol"
-    class="icon icon-twitter"><span>Twitter</span></a></li>
-    <li class="facebook"><a
-    href="https://facebook.com/linkibol"
-    class="icon icon-facebook"><span>Facebook</span></a></li>
-    </ul>
-    </div>
-    </article>
+                <dt><a href="http://o2js.com/J1V3R0Ckz/efficient-javascript/index.html">Efficient JavaScript @jive &raquo;&raquo;</a></dt>
+                <dd>(a condensed version of the above, presented at
+                <strong><a href="http://jivesoftware.com/">Jive Software</a></strong> HQ)</dd>
+                </dl>
+            </section>
+            <nav>
+                <h1>Other Places to Find Me&hellip;</h1>
 
-    <footer>
-    <p id="copyright">
-    2013 &copy;
-    <strong><a href="http://volkan.io">Volkan Özçelik</a></strong>
-    </p>
-    </footer>
-    </div>
-</body>
+                <ul class="pushdown">
+                <li><a href="http://o2js.com/">Read My <strong>Technical Blog</strong> &raquo;&raquo;</li>
+                <li><a href="http://github.com/v0lkan/">See My Recent Work on <strong>github</strong> &raquo;&raquo;</a></li>
+                <li><a href="http://linkedin.com/in/volkanozcelik">Contact Me on <strong>LinkedIn</strong> &raquo;&raquo;</a></li>
+                <li><a href="http://geekli.st/volkan">Geek Me on <strong>geeklist</strong> &raquo;&raquo;</a></li>
+                </ul>
+            </nav>
+        </article>
+        <footer>
+            <span>© <a href="http://o2js.com/">Volkan Özçelik</a></span>
+        </footer>
+    </body>
 </html>
