--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta name="description" content="About Volkan Özçelik; who I am and the cool stuff I do." />
         <meta name="keywords" content="Volkan, Volkan Özçelik, developer, front-end, portfolio" />
-        <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" >
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" >
         <style>
             body {font-family: 'Open Sans', sans-serif; line-height: 1.85em;color: #888;font-weight: 300;background: #fdf6e3;}
 
@@ -133,18 +133,32 @@
                 <p>Here are a group of slideshows from some of the talks I&#039;ve given so far:</p>
 
                 <dl>
-                <dt><a href="http://www.slideshare.net/linkibol/external-javascript-widget-development-best-practices-updated-v11"
-                    >External JavaScript Widget Development Best Practices &raquo;&raquo;</a></dt>
-                <dd>(a <strong>conference</strong> about widget development that I&#039;ve given at
-                    <strong><a href="http://jstanbul.org/2012/">JStanbul 2012</a></strong>)</dd>
 
-                <dt><a href="http://o2js.com/udemy/presentation/index.html">Efficient JavaScript @udemy &raquo;&raquo;</a></dt>
+                <dt><a href="https://speakerdeck.com/volkan/the-secrets-of-high-performance-mobile-javascript-applications">The Secrets of <strong>High Performance</strong> Mobile <strong>JavaScript</strong> Applications</a></dt>
+                <dd>(Learn the rules like a pro, so that you can break them like an artist <strong>;)</strong><br>
+                My talk on <strong>mobile performance</strong> at <a href="http://html5devconf.com"><strong>#html5devconf</strong> 2014</a>.<br>
+                You may also want to <a href="https://www.youtube.com/watch?v=zHObLRzQ-NU">watch the video recording</a>, and <a href="https://github.com/v0lkan/talks/tree/master/html5devconf">download the accompanying <strong>source code</strong> from <strong>GitHub</strong></a>)</dd>
+
+                <dt><a href="https://speakerdeck.com/volkan/the-modern-hackers-guide-to-the-universe">The Modern Hacker&#39;s Guide to The Universe &raquo;&raquo;</a></dt>
+                <dd>(talked about a practical approach to surviving a <strong>hackathon</strong> at <a href="http://hack4good.io">#hack4good 0.5</a>)</dd>
+                <dt><a href="https://speakerdeck.com/volkan/mobile-application-performance-tips">Mobile Application Performance Tips &raquo;&raquo;</a></dt>
+                <dd>(a talk that I gave at <a href="http://hack4good.io/">#hack4good 0.2</a>)</dd>
+
+                <dt><a href="https://speakerdeck.com/volkan/efficient-javascript">Efficient JavaScript @udemy &raquo;&raquo;</a></dt>
                 <dd>(a 3-hour <strong>workshop</strong> that I&#039;ve given to
-                <strong><a href="http://udemy.com>">udemy</a></strong> engineers)</dd>
+                <strong><a href="http://udemy.com>">udemy</a></strong> engineers;<br>
+                <a href="https://github.com/v0lkan/talks/tree/master/udemy">download the accompanying <strong>source code</strong> from <strong>GitHub</strong></a>)</dd>
+
 
                 <dt><a href="http://o2js.com/J1V3R0Ckz/efficient-javascript/index.html">Efficient JavaScript @jive &raquo;&raquo;</a></dt>
                 <dd>(a condensed version of the above, presented at
                 <strong><a href="http://jivesoftware.com/">Jive Software</a></strong> HQ)</dd>
+
+                <dt><a href="https://speakerdeck.com/volkan/javascript-widget-development-best-practices"
+                    >JavaScript Widget Development Best Practices &raquo;&raquo;</a></dt>
+                <dd>(a conference about widget development that I&#039;ve given at
+                    <strong><a href="http://jstanbul.org/2012/">JStanbul 2012</a></strong>)</dd>
+
                 </dl>
             </section>
             <nav>
