--- a/index.html
+++ b/index.html
@@ -3,112 +3,129 @@
     <head>
         <title>Volkan Özçelik</title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
-
-    	<!--
-    		Dear source code reader,
-
-    		Thank you very much for diving in.
-
-    		You are either stealing a CSS transition effect, or a layout feature on this page [1],
-    		or you are someone interested in how I organize my markup [2].
-
-    		For [1]: 
-    			Dude, go ahead use the code as if it's yours. I would appreciate if you
-    			send me a "thank you e-mail" (to me@volkan.io), so that we can get in touch with
-    			each other as two web professionals.
-
-    		For [2]: 
-    			Aside from the web font that I use, I have inlined all the css code. Since there's
-    			not much of a CSS, it made sense, because it was decreasing the time spent on the
-    			critical rendering path.
-
-    		Oh, and there's no JavaScript on this page (except for Google analytics), all the
-    		transitions are CSS transitions, and can be seen in any browser that does not suck.
-
-    		The layout is kind-of responsive; meaning: I did not spend a hell lot of time to
-    		optimize the experience in mobile user agents. However the content is still readable,
-    		and looks adequately decent in mobile browsers.
-
-    		Oh and there's an option [3]: You are a decision-maker, or a rare breed of
-    		recruiter with technical knowledge, and curiosity, wanting to "read the source"
-    		before walking the talk. Well, then I am confident in my knowledge, skills, and
-    		abilities; and my friends consider me a cunning hacker, and a fast learner.
-
-        		I love hacking, and I love paying attention to seemingly invisible things.
-
-    		At any rate, if you are interested enough to read the source, then we definitely
-    		should touch base.
-
-    		Oh... For the standardistas out there:
-
-        		Last time I checked this document was valid HTML5 + ARIA + SVG 1.1 + MathML 2.0.
-
-    		However, since those standards change regularly, and there still is debate between
-    		organizations, and domain experts on things like how to semantically structure the 
-    		document, whether we should use H1 tags all around, or show sympathy to screen readers 
-    		and use H1..H6 tags as we had used before, etc...
-
-    		I mean, I might not be doing the right thing, and I would love to have your ideas,
-    		opinions, and suggestions about how to make this markup better.
-
-    		I, myself, am a performance freak, so I'd truly appreciate any suggestion about
-    		how to make this web page better, and faster.
-
-    		With respect,
-    		Volkan.
-    	  -->
-
         <meta name="description" content="About Volkan Özçelik; who I am and the cool stuff I do.">
-        <meta name="keywords" content="Volkan, Volkan Özçelik, developer, public speaker, front-end, JavaScript">
+        <meta name="keywords" content="Volkan, Volkan Özçelik, developer, public speaker, front end, back end, devops, full stack, performance nerd, scalability freak, JavaScript">
 
 		<link href="//cloud.webtype.com/css/1fa83ac3-90eb-426f-8d4c-496c082fce54.css" rel="stylesheet" type="text/css">
 
 		<style>
-        	body {font-family: "Apres RE", Georgia, serif;line-height: 1.85em;color: #444;background: #fefefe url(http://bg.o2js.com/);}
+            body {
+                font-family: "Apres RE", Georgia, serif;
+                line-height: 1.85em;
+                color: #000;
+                background: #fefefe url(/bg);
+            }
 
-            h1, h2 {font-family:"MVB Calliope", Georgia, serif;font-size: 3.25em;line-height: 1.2em;letter-spacing:-0.025em;font-weight:normal;color: #000;margin: 0 0 0.1em 0;}
+            h1, h2 {
+                font-family:"MVB Calliope", Georgia, serif;
+                font-size: 3.25em;
+                line-height: 1.2em;
+                letter-spacing:-0.025em;
+                font-weight:normal;
+                margin: 1em 0.3em 0.1em 0.3em;
 
-            p {color: #000;font-size: 1.2em;line-height: 1.75em;margin: 0 0 1.5em 0;}
+            }
 
-            strong {color: #000;}
+            p {
+                font-size: 1.2em;
+                line-height: 1.75em;
+                margin: 0 1em 1.5em 2em;
+            }
 
             a {color: #003DF5;}
             a:hover {text-decoration: none;}
             a strong {color: #003DF5;}
             a:hover, a:hover strong {color: #003DF5 !important;}
 
-            ul, dl {margin: -1.5em 0 2.5em 2em;padding-left: 0;}
-            li, dt, dd {margin:  0 0 1em 0;display:block;font-size: 1.2em;line-height: 1.25em;}
-            dd {margin:0.5em 0 0 2em;font-style: italic;font-size:1em;line-height:1.8em;}
-			li a, dt a {display: block;}
+            blockquote {
+                font-style:italic;
+                border-left:2px #FFCC33 solid;
+                line-height:1.55em;padding-left:1em;
+                font-size: 1em;
+            }
 
-            blockquote {font-style:italic;font-size:1.0em;margin:-1em 0 0 1.2em;line-height:1.55em;border-left:2px #FFCC33 solid;padding-left:1em;}
+            ul, dl {
+                margin: 0 0 2.5em 2em;
+            }
 
-            aside {width: 19.5em;height: 19.5em;margin: 0 auto;border-radius: 50%;overflow: hidden;display:block;}
+            li, dt, dd {
+                display: block;
+                font-size: 1.2em;
+                line-height: 1.25em;
+                margin: 0 0 1em 0;
+            }
+
+            li a, dt a {
+                display: block;
+            }
+
+            dt {margin: 1em 0 0 0;}
+            dd {
+                margin:0.5em 0 0 2em;
+                font-style: italic;
+                font-size:1em;
+                line-height:1.8em;
+
+            }
+
+            aside {
+                width: 19.5em;
+                height: 19.5em;
+                margin: 0 auto;
+                border-radius: 50%;
+                overflow: hidden;
+                display:block;
+            }
             aside img {display: block;width: 100%;}
 
-            header h1 {margin-bottom:0;}
-            header p  {margin-top: 0.1em 0 2em 0;font-size: 1.2em;text-align: left;}
+            header p  {
+                margin: 0.1em 0 2em 0;
+                font-size: 1.2em;
+            }
 
-            footer {text-align: center;float: left;width: 100%;margin: 1em 0;}
-            footer span {display: block;padding-right: 2em;}
+            .flex-container {
+                display:flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: center;
+                align-content: flex-start;
+                align-items: stretch;
+            }
 
-            .pushdown {margin-top:1em;}
+            .flex-item-main {
+                margin-top: 2em;
+                margin-bottom: 6em;
 
-            #Meta {margin-top: 2em;width: 32%;float:left;min-width: 350px;}
-            #Main {margin-top: 2em;width: 65%;min-height: 600px;max-width: 750px;float:left;}
+                flex-grow: 1;
+                flex-shrink: 0;
+                flex-basis: 750px;
+                max-width: 750px;
 
-            #Main header, #Main footer, #Main section, #Main nav  {padding:1em;background:#fff;opacity:0.65;webkit-transform: matrix(1, -0.015, 0, 1, 0, 0) translate3d(0,0,1px);-o-transform: matrix(1, -0.085, 0, 1, 0, 0) translate3d(0,0,1px);-moz-transform: matrix(1, -0.015, 0, 1, 0, 0) translate3d(0,0,1px);-ms-transform: matrix(1, -0.015, 0, 1, 0, 0) translate3d(0,0,1px);transform: matrix(1, -0.015, 0, 1, 0, 0) translate3d(0,0,1px);}
+                background:#fff;
+                opacity:0.65;
 
-            @media (max-width: 1050px) {
-                #Meta {float: none;margin: 0 auto;width:65%;padding-bottom: 2em;padding-top: 1.2em;}
-                #Meta aside {margin: 0;}
-                #Main {margin: 0 auto;float:none;}
+                -webkit-transform: matrix(1, -0.015, 0, 1, 0, 0) translate3d(0,0,1px);
+                -o-transform: matrix(1, -0.085, 0, 1, 0, 0) translate3d(0,0,1px);
+                -moz-transform: matrix(1, -0.015, 0, 1, 0, 0) translate3d(0,0,1px);
+                -ms-transform: matrix(1, -0.015, 0, 1, 0, 0) translate3d(0,0,1px);
+                transform: matrix(1, -0.015, 0, 1, 0, 0) translate3d(0,0,1px);
+            }
+
+            .flex-item-aside {
+                margin-top: 2em;
+
+                flex-grow: 1;
+                flex-shrink: 0;
+                flex-basis: 350px;
+                max-width:400px;
             }
 
             @media (max-width: 800px) {
-                #Meta {padding-bottom: 1em;}
-                #Main {width: auto;padding: 2em;}
+                body {margin:0;}
+
+                .flex-container {align-contents: column;}
+                .flex-item-main {flex-basis: 98%;margin-left:0;margin-right:0;}
+                .flex-item-aside {flex-basis: 98%;}
             }
         </style>
         <script>
@@ -121,15 +138,15 @@
           ga('send', 'pageview');
         </script>
 </head>
-<body>
-    <div id="Meta">
+<body class="flex-container">
+    <div id="Meta" class="flex-item-aside">
         <aside><img src="images/me.jpg" alt="Photo of Volkan Özçelik" title="Volkan Özçelik"></aside>
     </div>
 
-    <article id="Main">
+    <article id="Main" class="flex-item-main">
         <header>
             <h1>Hi! I&#039;m Volkan Özçelik</h1>
-            <p style="text-align:right;"><em>Jack of all Trades, Samurai of <strong>JavaScript</strong></em></p>
+            <p style="text-align:right;padding-right:2em;"><em>Jack of all Trades, Samurai of <strong>JavaScript</strong></em></p>
         </header>
 
         <section>
@@ -142,7 +159,7 @@
             love to architect <strong>responsive</strong> and <strong>intuitive</strong> user interfaces,
             driven by amazingly well-organized <strong>JavaScript</strong> code.</p>
 
-            <p>Currently, I&#039;m a <strong>Technical Leader</strong> at <a href="http://cisco.com/">Cisco</a>;<br>
+            <p>Currently, I&#039;m a <strong>Technical Lead</strong> at <a href="http://cisco.com/">Cisco</a>;<br>
             I live in the lovely <strong>Mountain View, CA</strong>; I work at <strong>San Francisco</strong>.</p>
         </section>
 
@@ -152,9 +169,9 @@
             <p>I love to talk about&hellip;</p>
 
             <ul>
-            <li><strong>JavaScript Engineering</strong>;</li>
-            <li>Web Application <strong>Performance</strong> and <strong>Speed</strong>;</li>
-            <li>And <strong>Web Application Development</strong> Best Practices.</li>
+            <li><strong>Performance</strong> Engineering;</li>
+            <li>Widgets, APIs, <strong>Microservices</strong>;</li>
+            <li>And <strong>JavaScript</strong>!</li>
             </ul>
 
             <p>If you are interested <a href="mailto:volkan@o2js.com">just shoot me an email</a>.<br>
