--- a/index.html
+++ b/index.html
@@ -222,6 +222,11 @@
             <p>Here are some of the talks I&#039;ve given so far:</p>
 
             <dl>
+            <dt><a href="https://speakerdeck.com/volkan/scaling-your-node-dot-js-api-like-a-boss">Scaling Your Node.JS API Like a Boss &raquo;&raquo;</a></dt>
+            <dd>You would not want your service to be unusable at precisely the wrong time<br>
+                — while everyone is watching — would you? <strong>;)</strong><br>
+            My talk on <strong>Node.JS</strong>, <strong>performance</strong>, <strong>scalability</strong>, <strong>complexity</strong>,<br>
+                and <strong>consistency</strong> at <a href="http://htmlmag.com/etkinlik/the-frontiers-mini"><strong>#thefrontiers</strong> 2015</a>.</dd>
             <dt><a href="https://speakerdeck.com/volkan/the-secrets-of-high-performance-mobile-javascript-applications">The Secrets of <strong>High Performance</strong><br>
              Mobile <strong>JavaScript</strong> Applications &raquo;&raquo;</a></dt>
             <dd>Learn the rules like a pro, so that you can break them like an artist <strong>;)</strong><br>
