--- a/buy-me-a-coffee/index.html
+++ b/buy-me-a-coffee/index.html
@@ -211,7 +211,13 @@
         <section style="text-align:center;padding-top:2em;">
             <p>Did you like what you’ve read so far?</p>
 
-            <p>Tap the button below to buy me a latte then:</p>
+            <p>It takes time and energy to create quality articles.
+            It takes even more time and energy to write books.</p>
+
+            <p>A cup of coffee always helps me to stay alert and
+            productive <strong>;)</strong></p>
+
+            <p>Tap the button below to buy me a latte:</p>
 
             <div style="margin:1em;text-align:center;">
                 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
