--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
 
             }
 
+            h3 {
+                font-family:"MVB Calliope", Georgia, serif;
+                font-size: 2.25em;
+                line-height: 1.2em;
+                letter-spacing:-0.025em;
+                font-weight:normal;
+                margin: 1em 0.3em 0.1em 0.8em;
+                text-align: center;
+            }
+
             p {
                 font-size: 1.2em;
                 line-height: 1.75em;
@@ -139,7 +149,7 @@
 .fx-item-main:before, .flex-item-xmain:after
 {
 	content:"";
-    position:absolute; 
+    position:absolute;
     z-index:-1;
     -webkit-box-shadow:0 0 20px rgba(0,0,0,0.8);
     -moz-box-shadow:0 0 20px rgba(0,0,0,0.8);
@@ -150,15 +160,15 @@
     right:0;
     -moz-border-radius:100px / 10px;
     border-radius:100px / 10px;
-} 
+}
 .fex-item-main:after
 {
-	right:10px; 
+	right:10px;
     left:auto;
-    -webkit-transform:skew(8deg) rotate(3deg); 
-       -moz-transform:skew(8deg) rotate(3deg);     
-        -ms-transform:skew(8deg) rotate(3deg);     
-         -o-transform:skew(8deg) rotate(3deg); 
+    -webkit-transform:skew(8deg) rotate(3deg);
+       -moz-transform:skew(8deg) rotate(3deg);
+        -ms-transform:skew(8deg) rotate(3deg);
+         -o-transform:skew(8deg) rotate(3deg);
             transform:skew(8deg) rotate(3deg);
 }
 
@@ -228,17 +238,20 @@
             <p>I&#039;ve been in the industry <strong>since 2003</strong>;<br>
             and this is the place where I brag about all the cool stuff I do.</p>
 
-            <p>So far, I&#039;ve created mobile and web front-ends; played with SQL/NoSQL data stores; 
+            <p>So far, I’ve created mobile and web front-ends; played with SQL/NoSQL data stores;
             created solutions to improve <strong>scalability</strong> and <strong>performance</strong>
             of both front end, and also back-end systems.</p>
 
             <blockquote>
-            <p>Some call this being a “fullstack developer”, or a “unicorn developer”. 
+            <p>Some call this being a “<em>fullstack developer</em>”, or
+            a “<em>unicorn developer</e,>”.
             And although I love unicorns, I don&apos;t call myself as such:</p>
 
             <blockquote>
-            <p>I am an <strong>engineeer</strong> and I solve <strong>problems</strong>. The context
-            and the location, the origin, or the nature of the problems are <strong>orthogonal</strong> 
+            <p>I am an <strong>engineeer</strong> and I solve
+            <strong>problems</strong>. The context
+            and the location, the origin, or the nature of the problems are
+            <strong>orthogonal</strong>
             to the approaches I take in solving them.</p>
 
             <p>It is <strong>curiosity</strong>, asking the right questions, forming <strong>ideas</strong>,
@@ -260,7 +273,7 @@
             <p>While doing all these, I love to write amazingly well-organized <strong>JavaScript</strong> code.</p>
             </blockquote>
 
-            <p>Currently, I&#039;m a <strong>Technical Lead</strong> at <a href="http://cisco.com/">Cisco</a>;<br>
+            <p>Currently, I’m a <strong>Technical Lead</strong> at <a href="http://cisco.com/">Cisco</a>;<br>
             I live in the lovely <strong>Mountain View, CA</strong>; I work at <strong>San Francisco</strong>.</p>
         </section>
 
@@ -284,42 +297,75 @@
         <section>
             <h2>My Talks</h2>
 
-            <p>Here are some of the talks I&#039;ve given so far:</p>
+            <h3>Coming Up Next…</h3>
 
-            <dl>
-            <dt><a href="https://speakerdeck.com/volkan/scaling-your-node-dot-js-api-like-a-boss">Scaling Your Node.JS API <strong>Like a Boss</strong> &raquo;&raquo;</a></dt>
-            <dd>You would not want your service to be unusable at precisely the wrong time<br>
+            <p>You would not want your service to be unusable at precisely the wrong time<br>
                 — while everyone is watching — would you? <strong>;)</strong><br>
             My talk on <strong>Node.JS</strong>, <strong>performance</strong>, <strong>scalability</strong>, <strong>complexity</strong>,<br>
-                and <strong>consistency</strong> at <a href="http://htmlmag.com/etkinlik/the-frontiers-mini"><strong>#thefrontiers</strong> 2015</a>.</dd>
-            <dt><a href="https://speakerdeck.com/volkan/the-secrets-of-high-performance-mobile-javascript-applications">The Secrets of <strong>High Performance</strong><br>
-             Mobile <strong>JavaScript</strong> Applications &raquo;&raquo;</a></dt>
-            <dd>Learn the rules like a pro, so that you can break them like an artist <strong>;)</strong><br>
-            My talk on <strong>mobile performance</strong> at <a href="http://html5devconf.com"><strong>#html5devconf</strong> 2014</a>.<br>
+                and <strong>consistency</strong> at <a href="http://conferences.oreilly.com/fluent/javascript-html-us/public/schedule/detail/46028"><strong>O’Reilly Fluent Conf</strong>, early 2016</a>.</p>
+
+            <p>I’d love to chat with you if you happen to be there.</p>
+
+            <h3>Past Talks</h3>
+
+            <p>Here are some of the talks I’ve given so far:</p>
+
+            <dl>
+            <dt><a href="https://speakerdeck.com/volkan/the-secrets-of-high-performance-mobile-javascript-applications">The Secrets of <strong>High
+            Performance</strong><br>
+            Mobile <strong>JavaScript</strong> Applications
+            &raquo;&raquo;</a></dt>
+            <dd>Learn the rules like a pro, so that you can break them like an
+            artist <strong>;)</strong><br>
+            My talk on <strong>mobile performance</strong> at <a
+            href="http://html5devconf.com"><strong>#html5devconf</strong>
+            2014</a>.<br>
             You may want to
-            <a href="https://thenewcircle.com/s/post/1658/the_secrets_of_high_performance_mobile_javascript_applications">watch a more recent talk of mine</a> on the same topic<br>
-            /~from <em><a href="http://forwardjs.com"><strong>#forwardjs</strong>  2014</a></em>/;<br>
-            You can also <a href="https://github.com/v0lkan/talks/tree/master/html5devconf">download the accompanying <strong>source code</strong></a>.</dd>
+            <a href="https://thenewcircle.com/s/post/1658/the_secrets_of_high_performance_mobile_javascript_applications">watch a more recent talk of
+                mine</a> on the same topic<br>
+            /~from <em><a
+            href="http://forwardjs.com"><strong>#forwardjs</strong>
+            2014</a></em>/;<br>
+            You can also <a
+            href="https://github.com/v0lkan/talks/tree/master/html5devconf">down
+            load the accompanying <strong>source code</strong></a>.</dd>
 
-            <dt><a href="https://speakerdeck.com/volkan/the-modern-hackers-guide-to-the-universe">The Modern Hacker&#39;s Guide to The Universe &raquo;&raquo;</a></dt>
-            <dd>Talked about a practical approach to surviving a <strong>hackathon</strong> at <a href="http://hack4good.io"><strong>#hack4good</strong> 0.5</a>.</dd>
-            <dt><a href="https://speakerdeck.com/volkan/mobile-application-performance-tips">Mobile Application Performance Tips &raquo;&raquo;</a></dt>
-            <dd>A talk that I gave at <a href="http://hack4good.io/">#hack4good 0.2</a>.</dd>
+            <dt><a
+            href="https://speakerdeck.com/volkan/the-modern-hackers-guide-to-the-universe">The Modern Hacker&#39;s Guide to The Universe
+            &raquo;&raquo;</a></dt>
+            <dd>Talked about a practical approach to surviving a
+            <strong>hackathon</strong> at <a
+            href="http://hack4good.io"><strong>#hack4good</strong> 0.5</a>.</dd>
+            <dt><a
+            href="https://speakerdeck.com/volkan/mobile-application-performance-
+            tips">Mobile Application Performance Tips &raquo;&raquo;</a></dt>
+            <dd>A talk that I gave at <a href="http://hack4good.io/">#hack4good
+            0.2</a>.</dd>
 
-            <dt><a href="https://speakerdeck.com/volkan/efficient-javascript">Efficient JavaScript @udemy &raquo;&raquo;</a></dt>
+            <dt><a
+            href="https://speakerdeck.com/volkan/efficient-javascript">Efficient
+            JavaScript @udemy &raquo;&raquo;</a></dt>
             <dd>A 3-hour <strong>workshop</strong> that I&#039;ve given to
-            <strong><a href="http://udemy.com>">udemy</a></strong> engineers;<br>
-            <a href="https://github.com/v0lkan/talks/tree/master/udemy">download the accompanying <strong>source code</strong> from <strong>GitHub</strong></a>.</dd>
+            <strong><a href="http://udemy.com>">udemy</a></strong>
+            engineers;<br>
+            <a href="https://github.com/v0lkan/talks/tree/master/udemy">download
+            the accompanying <strong>source code</strong> from
+            <strong>GitHub</strong></a>.</dd>
 
-
-            <dt><a href="http://o2js.com/J1V3R0Ckz/efficient-javascript/index.html">Efficient JavaScript @jive &raquo;&raquo;</a></dt>
+            <dt><a
+            href="http://o2js.com/J1V3R0Ckz/efficient-javascript/index.html">Eff
+            icient JavaScript @jive &raquo;&raquo;</a></dt>
             <dd>A condensed version of the above, presented at
-            <strong><a href="http://jivesoftware.com/">Jive Software</a></strong> HQ.</dd>
+            <strong><a href="http://jivesoftware.com/">Jive
+            Software</a></strong> HQ.</dd>
 
-            <dt><a href="https://speakerdeck.com/volkan/javascript-widget-development-best-practices"
-                >JavaScript Widget Development Best Practices &raquo;&raquo;</a></dt>
+            <dt><a
+            href="https://speakerdeck.com/volkan/javascript-widget-development-best-practices"
+            >JavaScript Widget Development Best Practices
+            &raquo;&raquo;</a></dt>
             <dd>A conference about widget development that I&#039;ve given at
-                <strong><a href="http://jstanbul.org/2012/">JStanbul 2012</a></strong>.</dd>
+            <strong><a href="http://jstanbul.org/2012/">JStanbul
+            2012</a></strong>.</dd>
 
             </dl>
         </section>
@@ -327,38 +373,63 @@
         <section>
             <h2>I Write</h2>
 
-            <p>I have a book about <strong><a href="http://o2js.com/interview-questions">JavaScript Interview Questions</a></strong>;
+            <h3>JavaScript on the Edge</h3>
+
+            <p>I recently started <a
+            href="https://leanpub.com/js-next"
+            >writing a brand new book about <strong>JavaScript</strong> on the
+            edge</a>. It’s about all the cool things that are coming up next in
+            <strong>JavaScript</strong>. It’s a work in progress, and as of now
+            it’s <a href="https://leanpub.com/js-next"
+            >free to read online</a>.</p>
+
+            <h3>JavaScript Interview Questions</h3>
+
+            <p>I have a book about <strong><a
+            href="http://o2js.com/interview-questions">JavaScript Interview
+            Questions</a></strong>;
             and here is its story:</p>
 
-            <blockquote>In the last couple of years I have been to at least a hundred technical
+            <blockquote>In the last couple of years I have been to at least a
+            hundred technical
             interviews on <strong>JavaScript Engineering</strong>,
             <strong>Front-End Development</strong>, and related positions.
             So, rather than giving some HR Manager&#039;s perspective on what
-            interviews should look like, I wanted to hand over the reader the <strong>red pill</strong>
-            and tell what the <strong>JavaScript Engineering</strong> interviews <strong>really are</strong>.
+            interviews should look like, I wanted to hand over the reader the
+            <strong>red pill</strong>
+            and tell what the <strong>JavaScript Engineering</strong> interviews
+            <strong>really are</strong>.
             </blockquote>
 
             <ul class="pushdown" >
-            <li><a href="http://o2js.com/interview-questions/">learn more about my journey &raquo;&raquo;</a></li>
+            <li><a href="http://o2js.com/interview-questions/">learn more about
+            my journey &raquo;&raquo;</a></li>
             </ul>
-            <p>I also have a mostly <strong>JavaScript</strong>-related technical blog <a href="http://o2js.com"><strong>o2js.com</strong></a> that I regularly update.</p>
+            <p>I also have a mostly <strong>JavaScript</strong>-related
+            technical blog <a
+            href="http://o2js.com"><strong>o2js.com</strong></a> that I
+            regularly update.</p>
 
             <ul class="pushdown" >
             <li><a href="http://o2js.com/">read my blog &raquo;&raquo;</a></li>
             </ul>
 
-            <p>Oh, by the way, <a href="http://github.com/v0lkan/o2.js">o2.js</a> is a
+            <p>Oh, by the way, <a
+            href="http://github.com/v0lkan/o2.js">o2.js</a> is a
             <strong>JavaScript Framework</strong> that I have been<br>
             maintaining as a side project,
-            along with <a href="http://github.com/v0lkan">many other side projects</a>.</p>
+            along with <a href="http://github.com/v0lkan">many other side
+            projects</a>.</p>
         </section>
 
         <nav>
             <h2>Other Places to Find Me</h2>
 
             <ul class="pushdown">
-            <li><a href="http://github.com/v0lkan/">See My Recent Work on <strong>github</strong> &raquo;&raquo;</a></li>
-            <li><a href="http://linkedin.com/in/volkanozcelik">Contact Me on <strong>LinkedIn</strong> &raquo;&raquo;</a></li>
+            <li><a href="http://github.com/v0lkan/">See My Recent Work on
+            <strong>github</strong> &raquo;&raquo;</a></li>
+            <li><a href="http://linkedin.com/in/volkanozcelik">Contact Me on
+            <strong>LinkedIn</strong> &raquo;&raquo;</a></li>
             </ul>
         </nav>
     </article>
